--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "personal-website",
+  "name": "Personal Api",
   "version": "1.0.0",
-  "description": "Api Priv8 PakForlay",
+  "description": "Api Private",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pakforlay/personal-website.git"
+    "url": "git+https://github.com/MitsuGans/Api.git"
   },
-  "author": "PakForlay",
+  "author": "ItsuDesu",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -21,7 +21,7 @@
     "puppeteer": "^5.4.1"
   },
   "bugs": {
-    "url": "https://github.com/pakforlay/personal-website/issues"
+    "url": "https://github.com/MitsuGans/Api/issues"
   },
-  "homepage": "https://github.com/pakforlay/personal-website#readme"
+  "homepage": "https://github.com/MitsuGans/Api#readme"
 }
